Adding create a user endpoint
